# data-base

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: architecture.md  daily-report-plan.md  lessons-learned.md  performance.md
src/flash_dataset/: __init__.py  cli.py  errors.py  runtime.py
src/flash_dataset/validator/: __init__.py  arrow_compute.py  baselines.py  common.py  discovery.py  integrity.py  keccak.py  pipeline.py  profiles.py  reporting.py  rules.py  semantics.py
tests/: helpers.py  test_cli.py  test_discovery.py  test_keccak.py  test_reporting.py  test_rule_catalog.py  test_runtime.py  test_sample_day.py  test_validation.py
typings/pyarrow/: __init__.pyi  compute.pyi  dataset.pyi  parquet.pyi
