[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashblock-dataset"
version = "0.1.0"
description = "Validator for feed-base parquet datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyarrow>=15.0.0",
]

[project.scripts]
flash-dataset = "flash_dataset.cli:main"

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
target-version = ["py312"]

[tool.pyright]
include = ["src", "tests"]
stubPath = "typings"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

[tool.ruff]
target-version = "py312"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]
